random location & timer
10초 타이머 및 이미지 각각 10개씩 랜덤생성

--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
           <span>0</span>
         </div>
       </section>
-      <section class="field"></section>
+      <ul class="field">
+        <!-- <li class="item">
+          <button class="carrot">
+            <img src="img/carrot.png" alt="" />
+          </button>
+
+          <button class="bug">
+            <img src="img/bug.png" alt="" />
+          </button>
+        </li> -->
+      </ul>
     </div>
   </body>
 </html>
