--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     ></script>
   </head>
   <body>
+    <audio src="sound/bg.mp3" class="bg-bgm"></audio>
     <div class="container">
       <section class="board">
         <button class="start-btn">
@@ -34,6 +35,12 @@
             <img src="img/bug.png" alt="" />
           </button>
         </li> -->
+        <div class="gameover">
+          <button class="restart-btn">
+            <i class="fas fa-redo-alt"></i>
+          </button>
+          <h1 class="gameover__comment"></h1>
+        </div>
       </ul>
     </div>
   </body>
