--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <button class="pop-up__refresh">
         <i class="fas fa-redo"></i>
       </button>
-      <span class="pop-up__message">youlose</span>
+      <span class="pop-up__message"></span>
     </section>
   </body>
 </html>
